# notify-me

./: .gitignore  CLAUDE.md  pyproject.toml
notify_me/: __init__.py  cli.py  config.py  notifier.py  scheduler.py
