[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notify-me"
version = "0.1.0"
description = "Daily notification system for macOS"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[project.scripts]
notify-me = "notify_me.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
